--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
+<!DOCTYPE html>
+<html lang="nl">
+<head>
+    <meta charset="UTF-8">
+    <title>Hoofdpagina</title>
+</head>
+<body>
+    <header>
 
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
+</body>
