--- a/buitenlands/index.html
+++ b/buitenlands/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <header>
+        <img src="logoWhite.png" alt="Ons Odisee News logo : een halve-blauw cirkel" width ="150" height ="150">
 
     </header>
     <main>
