--- a/kids/index.html
+++ b/kids/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <title>Kids</title>
     <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <header>
-
+        <img src="logoWhite.png" alt="Ons Odisee News logo : een halve-blauw cirkel" width ="150" height ="150">
     </header>
     <main>
 
