--- a/sport/index.html
+++ b/sport/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Sport</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <header>
-
+        <img src="logoWhite.png" alt="Ons Odisee News logo : een halve-blauw cirkel" width ="150" height ="150">
     </header>
     <main>
 
