--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav>
         <ul>
             <li>
-                <a href="">Sports</a>
+                <a href="./sport/">Sports</a>
             </li>
             <li>
                 <a href="">Kids</a>
