--- a/sport/index.html
+++ b/sport/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <header>
-    <a href="./">
+    <a href="../">
         <img src="logoWhite.png" alt="logo" width="100">
     </a>
     <nav>
