--- a/TestOefProject/test.html
+++ b/TestOefProject/test.html
@@ -1,4 +1,4 @@
-)<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="nl">
 <head>
     <meta charset="UTF-8">
@@ -7,8 +7,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <header>
-        <p>Test dit is de header</p>
+    <header >
+        <a href="./" class="foto">
+            <img src="logoWhite.png" alt="logo" width="150" height="150">
+        </a>
+        <nav>
+            <ul>
+                <li>
+                    <a href="./sport/">Sports</a>
+                </li>
+                <li>
+                    <a href="">Kids</a>
+                </li>
+                <li>
+                    <a href="">Weer</a>
+                </li>
+                <li>
+                    <a href="">Regio</a>
+                </li>
+                <li>
+                    <a href="">Buitenlands</a>
+                </li>
+                <li>
+                    <a href="">Binnenlands</a> 
+                </li>
+                <li>
+                    <a href="" id="login">Login</a> 
+                </li>
+            </ul>
+        </nav>
     </header>
     <main>
         <div class="bigContainer"><!-- !BELANGRIJK! Grootcontainer waar je uw andere containers kunt insteken !BELANGRIJK! -->
@@ -17,18 +44,32 @@
                 <img src="download.png" alt="foto">
             </div>
             <div class="halfContainer">
-                <p>Dit is een tekst over een artikel</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
+                    molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
+                    numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
+                    optio, eaque rerum! Provident similique accusantium nemo autem. Veritatis
+                    obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam
+                    nihil, eveniet aliquid culpa officia aut!</p>
             </div>
         </div>
         <div class="container">
             <div class="drieContainer"><!--Een heel kleine container(ongeveer 1/3 van uw container) die je meestal combineert  met dezelfde container-->
-                    <p>Dit is een tekst over een artikel</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
+                        molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
+                        numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
+                        optio, eaque rerum! </p>
             </div>
             <div class="drieContainer">
-                <p>Dit is een tekst over een artikel</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
+                    molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
+                    numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
+                    optio, eaque rerum!</p>
             </div>
             <div class="drieContainer">
-                <p>Dit is een tekst over een artikel</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
+                    molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
+                    numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
+                    optio, eaque rerum!</p>
             </div>
 
         </div>
@@ -37,20 +78,31 @@
                 <img src="download.png" alt="foto">
             </div>
             <div class="tweeContainerKlein"><!--Een kleiner container die ongeveer 33-34% van uw scherm inneemt-->
-                <p>Dit is een tekst over een artikel</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
+                    molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
+                    numquam blanditiis.</p>
             </div>
         </div>
     </div>
     <div class="bigContainer">
         <div class="container">
             <div class="drieContainer">
-                    <p>Dit is een tekst over een artikel</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
+                    molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
+                    numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
+                    optio, eaque rerum!</p>
             </div>
             <div class="drieContainer">
-                <p>Dit is een tekst over een artikel</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
+                    molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
+                    numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
+                    optio, eaque rerum!</p>
             </div>
             <div class="drieContainer">
-                <p>Dit is een tekst over een artikel</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
+                    molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
+                    numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
+                    optio, eaque rerum!</p>
             </div>
 
         </div>
@@ -59,18 +111,32 @@
                 <img src="download.png" alt="foto">
             </div>
             <div class="halfContainer">
-                <p>Dit is een tekst over een artikel</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
+                    molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
+                    numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
+                    optio, eaque rerum! Provident similique accusantium nemo autem. Veritatis
+                    obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam
+                    nihil, eveniet aliquid culpa officia aut!</p>
             </div>
         </div>
         <div class="container">
             <div class="drieContainer">
-                    <p>Dit is een tekst over een artikel</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
+                        molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
+                        numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
+                        optio, eaque rerum!</p>
             </div>
             <div class="drieContainer">
-                <p>Dit is een tekst over een artikel</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
+                    molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
+                    numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
+                    optio, eaque rerum!</p>
             </div>
             <div class="drieContainer">
-                <p>Dit is een tekst over een artikel</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
+                    molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
+                    numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
+                    optio, eaque rerum!</p>
             </div>
 
         </div>
@@ -81,7 +147,17 @@
                 <img src="download.png" alt="foto">
             </div>
             <div class="halfContainer">
-                <p>Dit is een tekst over een artikel</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
+                    molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
+                    numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
+                    optio, eaque rerum! Provident similique accusantium nemo autem. Veritatis
+                    obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam
+                    nihil, eveniet aliquid culpa officia aut! Impedit sit sunt quaerat, odit,
+                    tenetur error, harum nesciunt ipsum debitis quas aliquid. Reprehenderit,
+                    quia. Quo neque error repudiandae fuga? Ipsa laudantium molestias eos 
+                    sapiente officiis modi at sunt excepturi expedita sint? Sed quibusdam
+                    recusandae alias error harum maxime adipisci amet laborum. Perspiciatis 
+                    minima nesciunt dolorem!</p>
             </div>
         </div>
         <div class="container">
@@ -89,13 +165,24 @@
                 <img src="download.png" alt="foto">
             </div>
             <div class="tweeContainerKlein">
-                <p>Dit is een tekst over een artikel</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
+                    molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
+                    numquam .</p>
             </div>
         </div>
     </div>
     </main>
     <footer>
-        <p>Test dit is de footer</p>
+        <a href="https://www.instagram.com/">
+            <img src="insta.png" alt="instagram" width="30">
+        </a>
+        <a href="https://www.twitter.com/">
+            <img src="twitter.png" alt="instagram" width="30">
+        </a>
+        <a href="https://www.facebook.com/">
+            <img src="facebook.png" alt="instagram" width="30">
+        </a>
+        <p>Odisee News</p>
     </footer>
 </body>
 </html>
