sport tussenpagina en binnenlands map toegevoegd

--- a/sport/index.html
+++ b/sport/index.html
@@ -44,7 +44,7 @@
                 <img src="ronaldo.png" alt="foto">
             </div>
             <div class="halfContainer">
-                <p><b style="font-size: large;"><a href="./formule1/"> CRISTIANO RONALDO Nieuwe transfer!</b><br>
+                <p><b style="font-size: large;"><a href="./cristiano/"> CRISTIANO RONALDO Nieuwe transfer!</b><br>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                     Maxime mollitia, molestiae quas vel sint commodi repudiandae consequuntur 
                     voluptatum laborum numquam blanditiis harum quisquam eius 
