--- a/sport/cristiano/index.html
+++ b/sport/cristiano/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header >
-        <a href="./" class="foto">
+        <a href="../../" class="foto">
             <img src="../logoWhite.png" alt="logo" width="150" height="150">
         </a>
         <nav>
