--- a/sport/transfer/index.html
+++ b/sport/transfer/index.html
@@ -8,28 +8,28 @@
 </head>
 <body>
     <header >
-        <a href="./" class="foto">
+        <a href="../../" class="foto">
             <img src="../logoWhite.png" alt="logo" width="150" height="150">
         </a>
         <nav>
             <ul>
                 <li>
-                    <a href="./sport/" class="sport">Sports</a>
+                    <a href="/sport/" class="sport">Sports</a>
                 </li>
                 <li>
-                    <a href="">Kids</a>
+                    <a href="/kids/">Kids</a>
                 </li>
                 <li>
-                    <a href="">Weer</a>
+                    <a href="/weer/">Weer</a>
                 </li>
                 <li>
-                    <a href="">Regio</a>
+                    <a href="/regio/">Regio</a>
                 </li>
                 <li>
-                    <a href="">Buitenlands</a>
+                    <a href="/buitenlands/">Buitenlands</a>
                 </li>
                 <li>
-                    <a href="">Binnenlands</a> 
+                    <a href="/binnenlands/">Binnenlands</a> 
                 </li>
                 <li>
                     <a href="" id="login">Login</a> 
@@ -38,14 +38,28 @@
         </nav>
     </header>
     <main>
-        <div class="container">
-            <img src="hazard.png" alt="foto">
-            <p>sdfsdfsdfsdfsdfdsfsdefsdf</p>
+        <div class="div1-3">.</div>
+        <div class="div2">
+            <img src="../transfer.png" alt="ronaldo" class="image">
+            <p class="centreer"><b>LIVE TRANSFERS. </b>
+                Cercle strikt Braziliaan, Chelsea wil voorlopig geen <b> 127 miljoen</b> betalen voor Enzo Fernández</a></p>
 
-
-
+            <p>Een volledige maand januari is de wintermercato open en kunnen clubs in binnen- en buitenland  opnieuw spelers aantrekken <br>of van de hand doen.
+                 In eigen land wordt het vooral uitkijken of Club Brugge en Antwerp zich nog versterken in de titelrace met Racing Genk, dat zelf al aangegeven
+                  een ruimere kern te willen maar ook nog spelers kan zien vertrekken.  <br><br>
+                En doet Anderlecht met z’n beperkt budget iets? Ook de grootste transfergeruchten
+                 en -deals uit het buitenland vind je in onze Transfer Talk terug.</p>
         </div>
+        <div class="div1-3">.</div>
+
+
+
+
+
+
+
     </main>
+    <div>
     <footer>
         <a href="https://www.instagram.com/">
             <img src="insta.png" alt="instagram" width="30">
@@ -58,5 +72,6 @@
         </a>
         <p>Odisee News</p>
     </footer>
+    </div>
 </body>
 </html>
