--- a/sport/index.html
+++ b/sport/index.html
@@ -57,7 +57,7 @@
        
         <div class="container">
             <div class="drieContainer"><!--Een heel kleine container(ongeveer 1/3 van uw container) die je meestal combineert  met dezelfde container-->
-                    <p><a href=""> <b>LIVE TRANSFERS. </b>
+                    <p><a href="./transfer/"> <b>LIVE TRANSFERS. </b>
                         Cercle strikt Braziliaan, Chelsea wil voorlopig geen <b> 127 miljoen</b> betalen voor Enzo Fernández</a></p>
             </div>
             <div class="drieContainer">
