bovenste deel sport

--- a/sport/cristiano/index.html
+++ b/sport/cristiano/index.html
@@ -44,7 +44,7 @@
             <p class="centreer"><b> CRISTIANO RONALDO Nieuwe transfer! </b></p>
             <p>Het was een schokkende zet die golven veroorzaakte in de voetbalwereld. 
                 Cristiano Ronaldo, algemeen beschouwd als één van de grootste spelers aller tijden, had akkoord gegaan
-                 met een transfer van Juventus naar Fenerbahce. <br><br>
+                 met een transfer van Manchester United naar Fenerbahce. <br><br>
     
                 Er waren al weken geruchten over de deal, maar niemand had verwacht dat het echt zou gebeuren.
                  Fenerbahce, hoewel een respectabele club in Turkije, is geen traditionele topclub op het Europese toneel. <br><br>
