--- a/sport/index.html
+++ b/sport/index.html
@@ -45,10 +45,9 @@
             </div>
             <div class="halfContainer">
                 <p><b style="font-size: large;"><a href="./cristiano/"> CRISTIANO RONALDO Nieuwe transfer!</b><br>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Maxime mollitia, molestiae quas vel sint commodi repudiandae consequuntur 
-                    voluptatum laborum numquam blanditiis harum quisquam eius 
-                    sed odit fugiat iusto ...eaque rerum!</a> 
+                    Het was een schokkende zet die golven veroorzaakte in de voetbalwereld. 
+                Cristiano Ronaldo, algemeen beschouwd als één van de grootste spelers aller tijden, had akkoord gegaan
+                 met een transfer van Manchester United naar Fenerbahce. </a> 
                 </p>
                     
             </div>
@@ -61,11 +60,11 @@
                         Cercle strikt Braziliaan, Chelsea wil voorlopig geen <b> 127 miljoen</b> betalen voor Enzo Fernández</a></p>
             </div>
             <div class="drieContainer">
-                <p><a href=""><b>Opnieuw</b> onsportieve supporters verwacht in thuismatch Van Aert tegen Van der Poel? 
+                <p><a href="./opnieuw/"><b>Opnieuw</b> onsportieve supporters verwacht in thuismatch Van Aert tegen Van der Poel? 
                     “Spugen en bier gooien: dat kan maar in één land”.</a></p>
             </div>
             <div class="drieContainer">
-                <p><a href="">Na <b> Donovan Mitchell</b> laat ook <b> Giannis Antetokounmpo</b> monsterscore 
+                <p><a href="donovan/">Na <b> Donovan Mitchell</b> laat ook <b> Giannis Antetokounmpo</b> monsterscore 
                     optekenen: Grieks fenomeen is goed voor 55 punten </a></p>
             </div>
 
@@ -75,7 +74,7 @@
                 <img src="lewis.png" alt="foto">
             </div>
             <div class="tweeContainerKlein"><!--Een kleiner container die ongeveer 33-34% van uw scherm inneemt-->
-                <p><a href=""><b> Lewis Hamilton </b>realiseert droom van zijn broer met beperking met 
+                <p><a href="lewis/"><b> Lewis Hamilton </b>realiseert droom van zijn broer met beperking met 
                     dag in F1-simulator van Mercedes. 
                 
                 </a></p>
