sport pagina klaar

--- a/sport/antwerp/index.html
+++ b/sport/antwerp/index.html
@@ -40,22 +40,20 @@
     <main>
         <div class="div1-3">.</div>
         <div class="div2">
-            <img src="../lewis.png" alt="ronaldo" class="image">
-            <p class="centreer"><b> Lewis Hamilton </b>realiseert droom van zijn broer met beperking met 
-                dag in F1-simulator van Mercedes. </p>
+            <img src="../antwerp.png" alt="ronaldo" class="image">
+            <p class="centreer">Antwerp vist achter het net: <b> Daley Blind </b>heeft toptransfer naar <b> Bayern </b>te pakken</a></p>
+            <p> <b> Slecht nieuws voor Antwerp. De Great Old leek in de strijd om Daley Blind (32) vooral nog met het Spaanse Real Sociedad rekening te moeten houden, 
+                maar uiteindelijk is het Bayern München dat de linksbenige Oranje-international voor minstens zes maanden in huis haalt.</b> <br><br>
+
+                Blind was bij Ajax de laatste maanden onder trainer Alfred Schreuder (ex-Club Brugge) lang niet meer altijd zeker van een
+                 basisplaats en hij mocht er dus beschikken. Zijn contract werd in onderling overleg ontbonden. “We zijn de afgelopen da
+                 gen met Daley tot overeenstemming gekomen om het nog lopende contract te beëindigen”, zei algemeen directeur Edwin van der Sar van 
+                Ajax nog over het nieuws van de on
+                tbinding. “Ik hoop dat hij bij een andere club nog
+                 een mooi vervolg gaat geven aan de laatste fase van zijn succesvolle voetballoopbaan.”
 
 
-            <p><b> Lewis Hamilton (37) schonk zijn jongere broer Nicolas (30), die een fysieke beperking heeft, een moment om nooit te vergeten. De zevenvoudige wereldkampioen in de Formule 1 regelde een dag in de F1-simulator van Mercedes. 
-                De monteurs bewogen hemel en aarde om dit mogelijk te maken. 
-                “En zo is Nicolas de eerste persoon met een handicap die hierin plaatsnam”, weet Lewis. </b><br><br>
-    
-                ENicolas werd in 1992 twee maanden te vroeg geboren. Hij heeft een cerebrale parese, 
-                een bewegingsstoornis die voortkomt uit een beschadiging van de hersenen. Dat beperkt hem in het uitvoeren van alledaagse handelingen. <br><br>
-
-                Toch is hij actief in de autosport. Nicolas is coureur in de British Touring Car Championship. 
-                Daar rijdt hij met een aangepaste auto. Hij stond al 117 keer aan de start, winnen of de pole pakken lukte nog niet.
-                 Maar Nicolas’ droom was steeds om te kunnen ervaren hoe het voelt om met een Formule 1-bolide rond te rijden.
-                </p>
+            </p>
         </div>
         <div class="div1-3">.</div>
 
