--- a/sport/donovan/index.html
+++ b/sport/donovan/index.html
@@ -65,18 +65,17 @@
 
     </main>
     <div>
-    <footer>
-        <a href="https://www.instagram.com/">
-            <img src="insta.png" alt="instagram" width="30">
-        </a>
-        <a href="https://www.twitter.com/">
-            <img src="twitter.png" alt="instagram" width="30">
-        </a>
-        <a href="https://www.facebook.com/">
-            <img src="facebook.png" alt="instagram" width="30">
-        </a>
-        <p>Odisee News</p>
-    </footer>
+        <footer>
+            <div>
+              <p class="centreer">odisee news</p>
+              <div>
+                <a href="https://www.instagram.com/" target="_blank">Instagram</a>
+                <a href="https://www.facebook.com/" target="_blank">Facebook</a>
+                <a href="https://twitter.com/" target="_blank">Twitter</a>
+              </div>
+            </div>
+          </footer>
+          
     </div>
 </body>
 </html>
