--- a/sport/henry/index.html
+++ b/sport/henry/index.html
@@ -40,22 +40,16 @@
     <main>
         <div class="div1-3">.</div>
         <div class="div2">
-            <img src="../lewis.png" alt="ronaldo" class="image">
-            <p class="centreer"><b> Lewis Hamilton </b>realiseert droom van zijn broer met beperking met 
-                dag in F1-simulator van Mercedes. </p>
+            <img src="../henry.png" alt="ronaldo" class="image">
+            <p class="centreer">Schuiven Lukaku en Alderweireld <b> Thierry Henry </b>terecht naar voren als nieuwe bondscoach? Deels, maar er zijn ook vraagtekens.</p>
 
-
-            <p><b> Lewis Hamilton (37) schonk zijn jongere broer Nicolas (30), die een fysieke beperking heeft, een moment om nooit te vergeten. De zevenvoudige wereldkampioen in de Formule 1 regelde een dag in de F1-simulator van Mercedes. 
-                De monteurs bewogen hemel en aarde om dit mogelijk te maken. 
-                “En zo is Nicolas de eerste persoon met een handicap die hierin plaatsnam”, weet Lewis. </b><br><br>
-    
-                ENicolas werd in 1992 twee maanden te vroeg geboren. Hij heeft een cerebrale parese, 
-                een bewegingsstoornis die voortkomt uit een beschadiging van de hersenen. Dat beperkt hem in het uitvoeren van alledaagse handelingen. <br><br>
-
-                Toch is hij actief in de autosport. Nicolas is coureur in de British Touring Car Championship. 
-                Daar rijdt hij met een aangepaste auto. Hij stond al 117 keer aan de start, winnen of de pole pakken lukte nog niet.
-                 Maar Nicolas’ droom was steeds om te kunnen ervaren hoe het voelt om met een Formule 1-bolide rond te rijden.
-                </p>
+            <p>Romelu Lukaku zegt: “Thierry Henry mag onze volgende bondscoach worden.” 
+                Toby Alderweireld noemt hem de “ultieme oplossing”. Hoe serieus moeten we 
+                Thierry Henry (45) nemen als kandidaat-bondscoach? We wegen de Fransman af 
+                op de acht belangrijkste punten uit de vacature van de bond. Op het eerste zicht vinkt hij alle vakjes af.
+                
+                Maar een béétje headhunter zal ook die paar gebreken opvallen.
+            </p>
         </div>
         <div class="div1-3">.</div>
 
