--- a/sport/index.html
+++ b/sport/index.html
@@ -8,28 +8,28 @@
 </head>
 <body>
     <header >
-        <a href="./" class="foto">
+        <a href="../" class="foto">
             <img src="logoWhite.png" alt="logo" width="150" height="150">
         </a>
         <nav>
             <ul>
                 <li>
-                    <a href="./sport/" class="sport">Sports</a>
+                    <a href="/sport/" class="sport">Sports</a>
                 </li>
                 <li>
-                    <a href="">Kids</a>
+                    <a href="/kids/">Kids</a>
                 </li>
                 <li>
-                    <a href="">Weer</a>
+                    <a href="/weer/">Weer</a>
                 </li>
                 <li>
-                    <a href="">Regio</a>
+                    <a href="/regio/">Regio</a>
                 </li>
                 <li>
-                    <a href="">Buitenlands</a>
+                    <a href="/buitenlands/">Buitenlands</a>
                 </li>
                 <li>
-                    <a href="">Binnenlands</a> 
+                    <a href="/binnenlands/">Binnenlands</a> 
                 </li>
                 <li>
                     <a href="" id="login">Login</a> 
@@ -84,56 +84,39 @@
     <div class="bigContainer">
         <div class="container">
             <div class="drieContainer">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
-                    molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
-                    numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
-                    optio, eaque rerum!</p>
+                <p><a href="./henry/"> Schuiven Lukaku en Alderweireld <b> Thierry Henry</b> terecht naar voren als nieuwe bondscoach? Deels, maar er zijn ook vraagtekens</a></p>
             </div>
             <div class="drieContainer">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
-                    molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
-                    numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
-                    optio, eaque rerum!</p>
+                <p><a href="bruce/">“Muziek van <b> Bruce Springsteen</b> gaf me een extra boost”: <b> Van Aert </b>vliegt door het zand in Koksijde en deelt uppercut uit aan concurrenten</a></p>
             </div>
             <div class="drieContainer">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
-                    molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
-                    numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
-                    optio, eaque rerum!</p>
+                <p><a href="antwerp/">Antwerp vist achter het net: <b> Daley Blind </b>heeft toptransfer naar <b> Bayern </b>te pakken</a></p>
             </div>
 
         </div>
         <div class="container">
             <div class="halfContainer">
-                <img src="download.png" alt="foto">
+                <img src="suarez1.png" alt="foto">
             </div>
             <div class="halfContainer">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
-                    molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
-                    numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
-                    optio, eaque rerum! Provident similique accusantium nemo autem. Veritatis
-                    obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam
-                    nihil, eveniet aliquid culpa officia aut!</p>
+                <p>
+                    <a href="suarez/"> <b> Kijk je mee, Ronaldo? Suarez past voor Saudisch geld en wordt bij nieuwe club als held onthaald</b><br>
+                        Meer dan 30.000 fans hebben Luis Suarez (35) verwelkomd bij zijn nieuwe club Grêmio. 
+                        De aanvaller ondertekent er een contract voor twee jaar. Suarez, die transfervrij overkwam van ...zichtbaar geëmotioneerd.
+                    
+                    </a>
+                </p>
             </div>
         </div>
         <div class="container">
             <div class="drieContainer">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
-                        molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
-                        numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
-                        optio, eaque rerum!</p>
+                    <p><a href="kijk/"> <b> KIJK. Tadej Pogacar</b> stond met de jaarwisseling op skilatten en zoefde ook spectaculair door de lucht in <b> Livigno</b></a></p>
             </div>
             <div class="drieContainer">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
-                    molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
-                    numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
-                    optio, eaque rerum!</p>
+                <p><a href="chicago/"> <b> Chicago</b> stopt zegereeks <b> Nets </b>ondanks 44 punten <b> Durant, Antetokounmpo</b> blijft waanzinnige cijfers neerzetten</a></p>
             </div>
             <div class="drieContainer">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
-                    molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
-                    numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
-                    optio, eaque rerum!</p>
+                <p><a href="dart/"> Indrukwekkende <b> Michael Smith</b> bekroont ninedarter met wereldtitel in finale tegen topfavoriet <b> Van Gerwen</b></a></p>
             </div>
 
         </div>
@@ -141,45 +124,36 @@
     <div class="bigContainer"> 
         <div class="containerBig"><!--Een heel grote container die 66% van uw scherm inneemt en die plaats overhoud voor nog eenzelfde conatiner-->
             <div class="halfContainer">
-                <img src="download.png" alt="foto">
+                <img src="boks.png" alt="foto">
             </div>
             <div class="halfContainer">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
-                    molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
-                    numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
-                    optio, eaque rerum! Provident similique accusantium nemo autem. Veritatis
-                    obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam
-                    nihil, eveniet aliquid culpa officia aut! Impedit sit sunt quaerat, odit,
-                    tenetur error, harum nesciunt ipsum debitis quas aliquid. Reprehenderit,
-                    quia. Quo neque error repudiandae fuga? Ipsa laudantium molestias eos 
-                    sapiente officiis modi at sunt excepturi expedita sint? Sed quibusdam
-                    recusandae alias error harum maxime adipisci amet laborum. Perspiciatis 
-                    minima nesciunt dolorem!</p>
+                <p><a href="./boks/"> <b> Antwerpse burgemeester krijgt gelijk van Raad van State: sportclub van kickbokser in Deurne moet twee maanden dichtblijven</b></p>
+                <p>De Raad van State heeft beslist dat de sluiting van de sportclub Vinci Club aan de Cruyslei in Deurne door burgemeester 
+                    De Wever gegrond is. De club moest normaal deze week opengaan. De burgemeester vindt ze een gevaar voor de veiligheid 
+                    en wil dat ze alvast twee maanden gesloten blijft. Recent was er een aanslag tegen de club, mogelijk door een conflict
+                    in het drugsmilieu. De uitbater, kickbokser Jamal Ben Saddik, stapte naar de Raad van State maar krijgt dus ongelijk.</a></p>
             </div>
         </div>
         <div class="container">
             <div class="tweeContainerGroot">
-                <img src="download.png" alt="foto">
+                <img src="zwemmen.png" alt="foto">
             </div>
             <div class="tweeContainerKlein">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
-                    molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
-                    numquam .</p>
+                <p><a href="./zwemmen/"> Minder vaak recreatief zwemmen in <b> Oudenaarde: "Noodgedwongen openingsuren beperken"</b></a></p>
             </div>
         </div>
     </div>
     </main>
     <footer>
-        <a href="https://www.instagram.com/">
-            <img src="insta.png" alt="instagram" width="30">
-        </a>
-        <a href="https://www.twitter.com/">
-            <img src="twitter.png" alt="instagram" width="30">
-        </a>
-        <a href="https://www.facebook.com/">
-            <img src="facebook.png" alt="instagram" width="30">
-        </a>
-        <p>Odisee News</p>
-    </footer>
+        <div><a href="../">
+                <img src="../logoWhite.png" alt="odisee" class="resize">
+            </a>
+          <div>
+            <a href="https://www.instagram.com/" target="_blank">Instagram</a>
+            <a href="https://www.facebook.com/" target="_blank">Facebook</a>
+            <a href="https://twitter.com/" target="_blank">Twitter</a>
+          </div>
+        </div>
+      </footer>
 </body>
 </html>
