in de map testoefproject zit er demo van header

--- a/TestOefProject/test.html
+++ b/TestOefProject/test.html
@@ -173,16 +173,21 @@
     </div>
     </main>
     <footer>
+        <div class="picE">
+
+        </div>
         <p>Odisee News</p>
-        <a href="https://www.instagram.com/">
+        <div class="pic">
+        <a href="https://www.instagram.com/" id="insta">
             <img src="insta.png" alt="instagram" width="30">
         </a>
-        <a href="https://www.twitter.com/">
+        <a href="https://www.twitter.com/"id="twitter">
             <img src="twitter.png" alt="instagram" width="30">
         </a>
-        <a href="https://www.facebook.com/">
+        <a href="https://www.facebook.com/"id="facebook">
             <img src="facebook.png" alt="instagram" width="30">
         </a>
+    </div>
     </footer>
 </body>
 </html>
