--- a/weer/index.html
+++ b/weer/index.html
@@ -2,17 +2,146 @@
 <html lang="nl">
 <head>
     <meta charset="UTF-8">
-    <title>Weer</title>
+    <title>portfolio</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="weer.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <header>
-        <img src="logoWhite.png" alt="Ons Odisee News logo : een halve-blauw cirkel" width ="150" height ="150">
+    <header >
+        <a href="./" class="foto">
+            <img src="logoBlack.png" alt="logo" width="150" height="150">
+        </a>
+        <nav>
+            <ul class="nav_links">
+                <li>
+                    <a href="./sport/">Sports</a>
+                </li>
+                <li>
+                    <a href="">Kids</a>
+                </li>
+                <li>
+                    <a href="" class="aanduidLI">Weer</a> <!-- Deze class wordt gebruikt voor uw aanduiding waar uw pagina op staat-->
+                </li>
+                <li>
+                    <a href="">Regio</a>
+                </li>
+                <li>
+                    <a href="">Buitenlands</a>
+                </li>
+                <li>
+                    <a href="">Binnenlands</a> 
+                </li>
+                <li>
+                    <a href="" id="login">Login</a> 
+                </li>
+            </ul>
+        </nav>
     </header>
     <main>
+    <div class="bigContainer"> 
+        <div class="containerBig"><!--Een heel grote container die 66% van uw scherm inneemt en die plaats overhoud voor nog eenzelfde conatiner-->
+            <div class="halfContainer">
+                <img src="regen.jfif" alt="foto">
+            </div>
+            <div class="halfContainer">
+                <p>
+                    <a href="http://" class="weerLink"> Heftigste regenbuien ooit worden verwacht in België!!</a> <br>
+                    Dat kan toch niet waar zijn toch! Alweer strontweer! In de komende dagen wordt er in België een van de ergste regenbuien ooit verwacht, bijna 100mm
+                    neerslag per uur. EN DAT IS ONTZETTEND VEEL!!! Dit is een van de ergste neerslagen ooit gemeten in België, misschien wel de ergste.
+                    Sommige dorpen moeten zelf geëvacueerd worden wegens gevaar op overstromingen, er worden al zandzakken voorzien om blokkades te maken tegen het water.
+                    Het leger en brandweer gaan massaal aanwezig bij risicoplaatsen ...
+                </p>
+            </div>
+        </div>
+        <div class="container">
+         <img src="./onweerTest.png" alt="">
+        </div>
+    </div>
+    <div class="bigContainer"><!-- !BELANGRIJK! Grootcontainer waar je uw andere containers kunt insteken !BELANGRIJK! -->
+        <div class="container"><!--Een kleinere container(ongeveer 1/3 van het scherm) dan die hierboven hier steek je uw containertyper -->
+            <div class="halfContainer"><!--Deze container gebruik je wanner je een afbeelding en tekst wilt insteken die ongeveer de helft van uw container gebruikt -->
+                <img src="sneeuwSad.jfif" alt="foto">
+            </div>
+            <div class="halfContainer">
+                <p><a href="http://" class="weerLink">Geen sneeuw, wel veel regen...</a> <br>
+                    Jaja slecht nieuws voor al die sneeuwman liefhebbers, vandejaar wordt er (zogoed als) geen sneeuw verwacht in Vlaanderen ...
+                    </p>
+            </div>
+        </div>
+        <div class="container">
+            <div class="drieContainer"><!--Een heel kleine container(ongeveer 1/3 van uw container) die je meestal combineert  met dezelfde container-->
+                    <p><a href="http://" class="weerLink">Erosie Verenigd Koninkrijk</a> <br>
+                    Door jarenlange erosie in het Verenigd Koninkrijk wordt het land maar kleiner en kleiner, elk jaar verlies het land ongeveer 0,0001 mm van hun platteland...
+                    </p>
+            </div>
+            <div class="drieContainer">
+                <p><a href="http://" class="weerLink">Gevaar Aardbeving Europa</a> <br>
+                    Kleine bevingen worden waargenomen onder de grond door specialisten, die volgens hun een groot gevaar vormen als ze niet aangepakt worden...
+                </p>
+            </div>
+            <div class="drieContainer">
+                <p><a href="http://" class="weerLink">Rukwinden trekken man af van de baan!</a> <br>
+                    Op een hevige windige dag in Bulgarije werd er een wandelaar van de baan getrokken en belandde die ...
+                </p>
+            </div>
 
+        </div>
+        <div class="containerNolijn">
+           <div class="weerRapport">
+                <p>Hier komt de weather app</p>
+           </div>
+        </div>
+    </div>
+    <div class="bigContainer">
+        <div class="container"><!--Een kleinere container(ongeveer 1/3 van het scherm) dan die hierboven hier steek je uw containertyper -->
+            <div class="halfContainer"><!--Deze container gebruik je wanner je een afbeelding en tekst wilt insteken die ongeveer de helft van uw container gebruikt -->
+                <img src="burnBaby.jfif" alt="foto">
+            </div>
+            <div class="halfContainer">
+                <p><a href="http://" class="weerLink">Huis schiet in brand maar wordt gered door Belgisch weer!</a> <br>
+                    Een huis in Namen werd vloog in brand door kortsluiting, kort derna komt moeder natuur in actie...
+                    </p>
+            </div>
+        </div>
+        <div class="container"><!--Een kleinere container(ongeveer 1/3 van het scherm) dan die hierboven hier steek je uw containertyper -->
+            <div class="halfContainer"><!--Deze container gebruik je wanner je een afbeelding en tekst wilt insteken die ongeveer de helft van uw container gebruikt -->
+                <img src="manBliksemparaplu.jpg" alt="foto">
+            </div>
+            <div class="halfContainer">
+                <p><a href="http://" class="weerLink">Man loopt op dak met paraplu en werd geraakt door een bliksemschoot!</a> <br>
+                    Daarmee zieje dat je nooit moogt rondlopen met een paraplu als er onweer is ...             </p>
+            </div>
+        </div>
+        <div class="container"><!--Een kleinere container(ongeveer 1/3 van het scherm) dan die hierboven hier steek je uw containertyper -->
+            <div class="halfContainer"><!--Deze container gebruik je wanner je een afbeelding en tekst wilt insteken die ongeveer de helft van uw container gebruikt -->
+                <img src="vietDog.jfif" alt="foto">
+            </div>
+            <div class="halfContainer">
+                <p><a href="http://" class="weerLink">Hond red familie in Vietnam!</a> <br>
+                    Een Vietnamees familie die getroffen werd door de orkaan Bing-Chilling waren vast onder puinhoop, een straathond die dagelijks bij hun huis passeerde redde hun levens... </p>
+            </div>
+        </div>
+    </div>
+    <div class="bigContainer">
+        
+    </div>
     </main>
     <footer>
-
+        <div class="picE">
+        </div>
+        <p>Odisee News</p>
+        <div class="pic">
+        <a href="https://www.instagram.com/" id="insta">
+            <img src="insta.png" alt="instagram" width="30">
+        </a>
+        <a href="https://www.twitter.com/"id="twitter">
+            <img src="twitter.png" alt="instagram" width="30">
+        </a>
+        <a href="https://www.facebook.com/"id="facebook">
+            <img src="facebook.png" alt="instagram" width="30">
+        </a>
+    </div>
     </footer>
 </body>
+</html>
